--- a/checkout-ar.html
+++ b/checkout-ar.html
@@ -6,13 +6,32 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
+  gtag('consent', 'default', {
+    ad_storage: 'denied',
+    analytics_storage: 'denied',
+    ad_user_data: 'denied',
+    ad_personalization: 'denied',
+    wait_for_update: 500
+  });
   gtag('js', new Date());
 
-  gtag('config', 'G-9N1CPZQ1HG');
+  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>إتمام الطلب - Lecomax</title>
+  <title>إتمام الطلب بأمان - Lecomax</title>
+  <meta name="description" content="أكمل طلبك بأمان مع ليكوماكس — حماية متقدمة، تأكيد سريع، وتوصيل موثوق داخل المغرب." />
+  <meta name="robots" content="noindex,follow" />
+  <link rel="canonical" href="https://lecomax.com/checkout-ar.html" />
+  <meta property="og:title" content="إتمام الطلب بأمان — Lecomax" />
+  <meta property="og:description" content="أكمل طلبك بأمان مع ليكوماكس — حماية متقدمة، تأكيد سريع، وتوصيل موثوق داخل المغرب." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lecomax.com/checkout-ar.html" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="إتمام الطلب بأمان — Lecomax" />
+  <meta name="twitter:description" content="أكمل طلبك بأمان مع ليكوماكس — حماية متقدمة، تأكيد سريع، وتوصيل موثوق داخل المغرب." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -25,7 +44,7 @@
     <div class="container announcement__inner">
       <span style="display:flex; align-items:center; gap:8px">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="opacity:0.8"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg>
-        دفع آمن
+        طلب آمن 100%
       </span>
       <div class="toplinks">
         <a class="toplink" href="index.html">العودة للمتجر</a>
@@ -52,49 +71,55 @@
         <nav class="breadcrumb" style="margin: 8px 0 14px 0; font-size: 0.85rem; color: var(--muted); display:flex; align-items:center; gap:8px;">
           <a href="index.html" style="color:var(--muted); text-decoration:none;">الرئيسية</a>
           <span style="opacity:0.3">/</span>
-          <span style="color:var(--text); font-weight:500">إتمام الطلب</span>
+          <span style="color:var(--text); font-weight:500">الدفع الآمن</span>
         </nav>
 
         <div class="product-layout checkout-grid">
           <div>
-            <h1 class="product-title checkout-title">معلومات التوصيل</h1>
+            <h1 class="product-title checkout-title">بيانات التوصيل</h1>
             <form id="checkoutForm" class="card checkout-card">
               <div class="checkout-fields">
-                <div id="checkoutMessage" class="checkout-message" style="display:none;"></div>
+                <div id="checkoutMessage" class="checkout-message" style="display:none;" aria-live="polite"></div>
                 <div class="checkout-field" style="display:none;">
-                  <label for="website" class="checkout-label">موقع الكتروني</label>
+                  <label for="website" class="checkout-label">موقع إلكتروني</label>
                   <input id="website" name="website" class="checkout-input" autocomplete="off" tabindex="-1" placeholder="اترك هذا الحقل فارغاً" />
                 </div>
                 <div class="checkout-field">
                   <label for="fullName" class="checkout-label">الاسم الكامل</label>
-                  <input id="fullName" name="fullName" required class="checkout-input" placeholder="الاسم الكامل" />
+                  <input id="fullName" name="fullName" required class="checkout-input" placeholder="أدخل الاسم الكامل" autocomplete="name" />
                 </div>
                 <div class="checkout-field">
                   <label for="phone" class="checkout-label">رقم الهاتف</label>
-                  <input id="phone" name="phone" required class="checkout-input" placeholder="رقم الهاتف" />
+                  <input id="phone" name="phone" required class="checkout-input" placeholder="أدخل رقم الهاتف" autocomplete="tel" inputmode="tel" />
                 </div>
                 <div class="checkout-field">
                   <label for="address" class="checkout-label">العنوان</label>
-                  <input id="address" name="address" required class="checkout-input" placeholder="العنوان بالتفصيل" />
+                  <input id="address" name="address" required class="checkout-input" placeholder="أدخل العنوان بالتفصيل" autocomplete="street-address" />
                 </div>
                 <div class="checkout-field checkout-field--row">
                   <div>
                     <label for="city" class="checkout-label">المدينة</label>
-                    <input id="city" name="city" required class="checkout-input" placeholder="المدينة" />
+                    <input id="city" name="city" required class="checkout-input" placeholder="أدخل المدينة" autocomplete="address-level2" />
                   </div>
                   <div>
                     <label for="postalCode" class="checkout-label">الرمز البريدي</label>
-                    <input id="postalCode" name="postalCode" required class="checkout-input" placeholder="الرمز البريدي" />
+                    <input id="postalCode" name="postalCode" required class="checkout-input" placeholder="أدخل الرمز البريدي" autocomplete="postal-code" inputmode="numeric" />
                   </div>
                 </div>
+                <div class="checkout-field">
+                  <div id="turnstileWidget" class="cf-turnstile" data-sitekey="1x00000000000000000000AA" data-theme="light"></div>
+                </div>
                 <button class="btn btn--primary checkout-submit" type="submit">تأكيد الطلب</button>
-                <div class="checkout-hint">سنتصل بك لتأكيد تفاصيل التوصيل.</div>
+                <div class="checkout-hint">سيقوم فريقنا بالاتصال بك سريعاً لتأكيد تفاصيل الطلب والتوصيل.</div>
+                <div class="checkout-hint" style="margin-top:8px; font-size:0.86rem;">
+                  ✔ ضمان رسمي • ✔ حماية متقدمة ضد الروبوتات • ✔ توصيل سريع داخل المغرب
+                </div>
               </div>
             </form>
           </div>
 
           <aside class="card checkout-card checkout-summary">
-            <h2 class="checkout-summary__title">ملخص الطلب</h2>
+            <h2 class="checkout-summary__title">ملخص طلبك</h2>
             <div id="checkoutItems" class="checkout-items"></div>
             <div class="totals checkout-totals">
               <span class="muted">المجموع</span>
@@ -116,14 +141,16 @@
     <div class="checkout-modal__backdrop"></div>
     <div class="checkout-modal__card">
       <div class="checkout-modal__icon">✓</div>
-      <h3>تم استلام الطلب</h3>
-      <p class="muted">سنتصل بك لتأكيد تفاصيل التوصيل.</p>
-      <button class="btn btn--primary" id="checkoutDone">متابعة</button>
+      <h3>تم استلام طلبك بنجاح</h3>
+      <p class="muted">شكراً لك. سنتواصل معك قريباً لتأكيد التفاصيل وإتمام التوصيل.</p>
+      <button class="btn btn--primary" id="checkoutDone">العودة للتسوق</button>
     </div>
   </div>
 
   <script src="app.js"></script>
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   <script src="checkout.js"></script>
+  <script src="cookie-consent.js"></script>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
