--- a/customer-service-ar.html
+++ b/customer-service-ar.html
@@ -4,6 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>وكيل مباشر - ليكوماكس</title>
+  <meta name="description" content="تواصل مباشرة مع وكيل ليكوماكس للحصول على دعم سريع بخصوص الطلبات والشحن." />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://lecomax.com/customer-service-ar.html" />
+  <meta property="og:title" content="وكيل مباشر — Lecomax" />
+  <meta property="og:description" content="تواصل مباشرة مع وكيل ليكوماكس للحصول على دعم سريع بخصوص الطلبات والشحن." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lecomax.com/customer-service-ar.html" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="وكيل مباشر — Lecomax" />
+  <meta name="twitter:description" content="تواصل مباشرة مع وكيل ليكوماكس للحصول على دعم سريع بخصوص الطلبات والشحن." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <meta name="theme-color" content="#e8f1ff" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -168,6 +180,7 @@
       letter-spacing: -0.02em;
       color: var(--agent-ink);
       background: linear-gradient(135deg, #0f172a 0%, #334155 100%);
+      background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       max-width: 12ch;
@@ -650,6 +663,7 @@
       });
     }
   </script>
+  <script src="cookie-consent.js"></script>
 </body>
 </html>
 
