--- a/help-center.html
+++ b/help-center.html
@@ -6,13 +6,32 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
+  gtag('consent', 'default', {
+    ad_storage: 'denied',
+    analytics_storage: 'denied',
+    ad_user_data: 'denied',
+    ad_personalization: 'denied',
+    wait_for_update: 500
+  });
   gtag('js', new Date());
 
-  gtag('config', 'G-9N1CPZQ1HG');
+  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Help Center — Lecomax</title>
+  <meta name="description" content="Get support for orders, shipping, delivery timelines, and payment questions at Lecomax Help Center." />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://lecomax.com/help-center.html" />
+  <meta property="og:title" content="Help Center — Lecomax" />
+  <meta property="og:description" content="Get support for orders, shipping, delivery timelines, and payment questions at Lecomax Help Center." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lecomax.com/help-center.html" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Help Center — Lecomax" />
+  <meta name="twitter:description" content="Get support for orders, shipping, delivery timelines, and payment questions at Lecomax Help Center." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <meta name="theme-color" content="#ffffff" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,6 +105,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+  <script src="cookie-consent.js"></script>
 </body>
 </html>
 
