--- a/newsroom.html
+++ b/newsroom.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 <!-- Google tag (gtag.js) -->
@@ -6,13 +6,32 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
+  gtag('consent', 'default', {
+    ad_storage: 'denied',
+    analytics_storage: 'denied',
+    ad_user_data: 'denied',
+    ad_personalization: 'denied',
+    wait_for_update: 500
+  });
   gtag('js', new Date());
 
-  gtag('config', 'G-9N1CPZQ1HG');
+  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Newsroom â€” Lecomax</title>
+  <title>Newsroom — Lecomax</title>
+  <meta name="description" content="Read the latest Lecomax updates, product launches, and service announcements." />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://lecomax.com/newsroom.html" />
+  <meta property="og:title" content="Newsroom — Lecomax" />
+  <meta property="og:description" content="Read the latest Lecomax updates, product launches, and service announcements." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lecomax.com/newsroom.html" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Newsroom — Lecomax" />
+  <meta name="twitter:description" content="Read the latest Lecomax updates, product launches, and service announcements." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
@@ -23,7 +42,7 @@
     <div class="container header__inner">
       <a class="brand" href="index.html">
         
-        <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Newsroom</span></span>
+        <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">Newsroom</span></span>
       </a>
     </div>
   </header>
@@ -36,13 +55,13 @@
       <div style="margin-top: 40px; display: grid; gap: 30px;">
         
         <article class="sideCard" style="display:block;">
-            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">NEW LAUNCH â€¢ FEB 2026</div>
+            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">NEW LAUNCH • FEB 2026</div>
             <h2 style="margin: 0 0 10px; font-size: 1.4rem;">New Audio Collection Arrives</h2>
             <p class="muted" style="margin-bottom: 0;">We've expanded our headphone lineup with the latest noise-canceling technology from top proprietary brands.</p>
         </article>
 
         <article class="sideCard" style="display:block;">
-            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">UPDATE â€¢ JAN 2026</div>
+            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">UPDATE • JAN 2026</div>
             <h2 style="margin: 0 0 10px; font-size: 1.4rem;">Enhanced Delivery Speed</h2>
             <p class="muted" style="margin-bottom: 0;">We have partnered with new logistics providers to ensure 48-hour delivery to major cities including Casablanca, Rabat, and Marrakech.</p>
         </article>
@@ -63,7 +82,9 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+  <script src="cookie-consent.js"></script>
 </body>
 </html>
+
 
 
