--- a/shop.html
+++ b/shop.html
@@ -6,13 +6,23 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
+  gtag('consent', 'default', {
+    ad_storage: 'denied',
+    analytics_storage: 'denied',
+    ad_user_data: 'denied',
+    ad_personalization: 'denied',
+    wait_for_update: 500
+  });
   gtag('js', new Date());
 
-  gtag('config', 'G-9N1CPZQ1HG');
+  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Shop — Lecomax</title>
+  <meta name="description" content="Browse premium Lecomax collections in electronics, fashion, shoes, and accessories." />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://lecomax.com/shop.html" />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph / Link Preview Tags -->
@@ -96,7 +106,7 @@
         </div>
       </div>
       <!-- Product Options Modal -->
-      <div id="product-options-modal" class="product-options-modal" style="display:none;">
+      <div id="product-options-modal" class="product-options-modal product-options-modal--hidden">
         <div class="product-options-modal__content">
           <button class="product-options-modal__close" aria-label="Close">&times;</button>
           <div class="product-options-modal__img-wrap">
@@ -219,7 +229,7 @@
           </svg>
         </button>
         <button class="iconbtn" id="openCart" type="button" aria-label="Cart">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" style="opacity:0.9">
+          <svg class="cart-svg-muted" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
             <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path>
             <line x1="3" y1="6" x2="21" y2="6"></line>
             <path d="M16 10a4 4 0 0 1-8 0"></path>
@@ -237,7 +247,7 @@
         <div>
           <h2>All Products</h2>
           <p class="muted">Explore our complete collection.</p>
-          <div id="resultCount" class="result-count" style="margin-top: 8px; font-size: 0.9rem; color: var(--muted);"></div>
+          <div id="resultCount" class="result-count result-count--meta" aria-live="polite"></div>
         </div>
 
         <div class="filters">
@@ -246,35 +256,44 @@
             <button class="search-btn" id="searchBtn">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
             </button>
-            <button class="search-btn clear-btn" id="clearSearch" style="display: none;" title="Clear search">
+            <button class="search-btn clear-btn clear-btn--hidden" id="clearSearch" title="Clear search">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
             </button>
           </div>
           
           <div class="filter-group">
             <button class="pillBtn is-active" data-filter-btn="all" type="button">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 6px;"><circle cx="12" cy="12" r="10"></circle><polygon points="16.24 7.76 14.12 14.12 7.76 16.24 4.64 12 7.76 7.76 14.12 4.64 16.24 7.76"></polygon></svg>
+              <svg class="pill-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><polygon points="16.24 7.76 14.12 14.12 7.76 16.24 4.64 12 7.76 7.76 14.12 4.64 16.24 7.76"></polygon></svg>
               All
             </button>
             <button class="pillBtn" data-filter-btn="electronics" type="button">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 6px;"><rect x="4" y="2" width="16" height="20" rx="2" ry="2"></rect><circle cx="12" cy="14" r="4"></circle><line x1="12" y1="6" x2="12" y2="10"></line></svg>
+              <svg class="pill-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="4" y="2" width="16" height="20" rx="2" ry="2"></rect><circle cx="12" cy="14" r="4"></circle><line x1="12" y1="6" x2="12" y2="10"></line></svg>
               Electronics
             </button>
             <button class="pillBtn" data-filter-btn="clothing" type="button">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 6px;"><path d="M20.38 3.46L16 2a4 4 0 01-8 0L3.62 3.46a2 2 0 00-1.34 2.23l.58 3.47a1 1 0 00.99.84H6v10c0 1.1.9 2 2 2h8a2 2 0 002-2V9.06h2.15a1 1 0 00.99-.84l.58-3.47a2 2 0 00-1.34-2.23z"></path></svg>
+              <svg class="pill-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20.38 3.46L16 2a4 4 0 01-8 0L3.62 3.46a2 2 0 00-1.34 2.23l.58 3.47a1 1 0 00.99.84H6v10c0 1.1.9 2 2 2h8a2 2 0 002-2V9.06h2.15a1 1 0 00.99-.84l.58-3.47a2 2 0 00-1.34-2.23z"></path></svg>
               Clothing
             </button>
             <button class="pillBtn" data-filter-btn="shoes" type="button">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 6px;"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="7.5 4.27 12 6.11 16.5 4.27"></polyline><line x1="12" y1="6.11" x2="12" y2="18.11"></line></svg>
+              <svg class="pill-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="7.5 4.27 12 6.11 16.5 4.27"></polyline><line x1="12" y1="6.11" x2="12" y2="18.11"></line></svg>
               Shoes
             </button>
             <button class="pillBtn" data-filter-btn="accessories" type="button">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 6px;"><path d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c-2.667 0-4.333.667-5 1-.667.333-1.333 1.333-2 1-.667 0-1.333-.667-2-1-.667-.333-2.333-1-5-1"></path><path d="M9 7h6"></path></svg>
+              <svg class="pill-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c-2.667 0-4.333.667-5 1-.667.333-1.333 1.333-2 1-.667 0-1.333-.667-2-1-.667-.333-2.333-1-5-1"></path><path d="M9 7h6"></path></svg>
               Backpacks
             </button>
           </div>
 
           <div class="advanced-filters">
+            <select class="select" id="sort" aria-label="Sort">
+              <option value="featured" data-i18n="sort_featured">Featured</option>
+              <option value="price_asc" data-i18n="sort_price_low_high">Price: Low to High</option>
+              <option value="price_desc" data-i18n="sort_price_high_low">Price: High to Low</option>
+              <option value="rating_desc" data-i18n="sort_rating_top">Top Rated</option>
+              <option value="name_asc" data-i18n="sort_name_az">Name: A-Z</option>
+              <option value="newest" data-i18n="sort_newest">Newest</option>
+            </select>
+
             <select class="select" id="priceRange" aria-label="Price Range">
               <option value="all" data-i18n="filter_price_all">All Prices</option>
               <option value="0-200" data-i18n="filter_price_under_200">Under 200 MAD</option>
@@ -290,6 +309,28 @@
               <option value="5" data-i18n="filter_rating_5">5 Stars</option>
             </select>
           </div>
+
+          <div class="power-controls">
+            <label class="stock-toggle" for="onlyInStock">
+              <input type="checkbox" id="onlyInStock">
+              <span data-i18n="in_stock_only">In-stock only</span>
+            </label>
+
+            <div class="max-price-wrap">
+              <label for="maxPriceRange" data-i18n="max_price">Max Price</label>
+              <div class="max-price-track">
+                <input type="range" id="maxPriceRange" min="100" max="2000" step="10" value="2000">
+                <span id="maxPriceValue">2000 MAD</span>
+              </div>
+            </div>
+
+            <div class="filter-actions">
+              <button id="resetFilters" type="button" class="btn btn--ghost btn--small" data-i18n="reset_filters">Reset Filters</button>
+              <button id="copyFilterLink" type="button" class="btn btn--ghost btn--small" data-i18n="copy_filter_link">Copy Filter Link</button>
+            </div>
+          </div>
+
+          <div id="activeFilterChips" class="active-filter-chips" aria-live="polite"></div>
 
           <div class="view-toggle">
             <button class="view-btn is-active" data-view="grid" title="Grid view">
@@ -333,7 +374,7 @@
           <div class="quote__stars">★★★★★</div>
           <div class="quote__title">“Fast delivery & great packaging.”</div>
           <div class="quote__foot">
-            <div class="quote__avatar" style="background:#e0f2fe; color:#0284c7">S</div>
+            <div class="quote__avatar quote__avatar--sarah">S</div>
             <div>
               <div class="quote__name">Sarah M.</div>
               <div class="quote__ver">Verified Buyer</div>
@@ -351,7 +392,7 @@
         <div class="newsletter__icon">✉️</div>
         <h3 data-i18n="join_club">Join the Club</h3>
         <p data-i18n="join_club_desc">Get exclusive access to new drops and secret sales.</p>
-        <form class="newsletter__form" onsubmit="event.preventDefault(); alert('Thanks for subscribing!');">
+        <form class="newsletter__form" onsubmit="event.preventDefault(); this.reset(); if(window.showToast){ window.showToast('Thanks for subscribing!'); }">
           <div class="input-group">
             <input type="email" class="newsletter__input" placeholder=" " required />
             <label class="floating-label" data-i18n="enter_email">Enter your email</label>
@@ -364,9 +405,9 @@
 
   </div><!-- End Home View -->
   
-  <div id="product-page-view" class="product-page-view" style="display:none; padding-top:40px; padding-bottom:80px; min-height:80vh;">
+  <div id="product-page-view" class="product-page-view product-page-view--hidden">
       <div class="container">
-          <button onclick="closeProductPage()" class="btn btn--ghost" style="margin-bottom:20px; display:inline-flex; align-items:center; gap:8px;">
+          <button onclick="closeProductPage()" class="btn btn--ghost product-page-back-btn">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 12H5M12 19l-7-7 7-7"/></svg>
             <span data-i18n="back_home">Back to Home</span>
           </button>
@@ -378,7 +419,7 @@
     <div class="container footer__inner">
       <div class="footBrand">
         <a class="brand brand--foot" href="index.html">
-           <span class="brand__name" style="font-size:1.5rem"><span class="brand__accent">L'</span>ECOMAX</span>
+           <span class="brand__name brand__name--foot"><span class="brand__accent">L'</span>ECOMAX</span>
         </a>
         <p class="foot-desc">Elevate your everyday with curated premium essentials. Experience the perfect blend of modern style and uncompromising quality, delivered directly to you.</p>
         <div class="social-links">
@@ -538,9 +579,9 @@
             <div class="variant-group">
               <label data-i18n="color">Color</label>
               <div class="variant-options color-options">
-                <button class="p-color selected" style="--c:#111"></button>
-                <button class="p-color" style="--c:#555"></button>
-                <button class="p-color" style="--c:#888"></button>
+                <button class="p-color p-color--dark selected"></button>
+                <button class="p-color p-color--mid"></button>
+                <button class="p-color p-color--light"></button>
               </div>
             </div>
             <div class="variant-group">
@@ -588,6 +629,7 @@
 
   <script src="interactions.js"></script>
   <script src="app.js"></script>
+  <script src="cookie-consent.js"></script>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
