--- a/thank-you-fr.html
+++ b/thank-you-fr.html
@@ -6,13 +6,32 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
+  gtag('consent', 'default', {
+    ad_storage: 'denied',
+    analytics_storage: 'denied',
+    ad_user_data: 'denied',
+    ad_personalization: 'denied',
+    wait_for_update: 500
+  });
   gtag('js', new Date());
 
-  gtag('config', 'G-9N1CPZQ1HG');
+  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Merci - Lecomax</title>
+  <meta name="description" content="Merci pour votre commande Lecomax. La confirmation et les détails de livraison arrivent bientôt." />
+  <meta name="robots" content="noindex,follow" />
+  <link rel="canonical" href="https://lecomax.com/thank-you-fr.html" />
+  <meta property="og:title" content="Merci — Lecomax" />
+  <meta property="og:description" content="Merci pour votre commande Lecomax. La confirmation et les détails de livraison arrivent bientôt." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lecomax.com/thank-you-fr.html" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Merci — Lecomax" />
+  <meta name="twitter:description" content="Merci pour votre commande Lecomax. La confirmation et les détails de livraison arrivent bientôt." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
@@ -72,5 +91,6 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+  <script src="cookie-consent.js"></script>
 </body>
 </html>
